Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL)
-
None
Description
The new Win11 feature - autodetection of QoS misclassifies MariaDB server as "EcoQos", i.e a background application that should be power throttled.
In special case of hybrid CPU design, such as Alder Lake Intel processor, mariadbd.exe will be put into low-performance "efficiency cores". This does not happen if mariadb server runs in a visible window (or runs with higher priority, or runs under powerful admin user) . But in our default setting, MariaDB is a service - no visible windows, runs under low-privileged user, normal priority - in this case misdetection happens.
The effect of this is reduced performance - on my own machine with Alder Lake processor,
sysbench benchmark (oltp_point_select/20 users, 1 table, 1 mio rows, in-memory) runs with approx 260K qps instead of 450 kps.
Documentation states, that this EcoQOS should not be used with performance critical applications. As we like to think of mariadb as performance critical, we should to opt-out of autodetection feature. Those user who find that they need it, can force EcoQOS themselves , e.g via task manager